apps/website/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: default
spec:
  selector:
    app: website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
